[package]
name = "urlbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["stream"] }
tokio = { version = "1.19.2", features = ["full"] }
futures-util = "0.3.21"